commit-013 UI Changes